# simple-agents

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/development/: contributing.md
docs/examples/: basic-agent.md  multi-provider.md  tool-usage.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: batch.md  compaction.md  events.md  providers.md  sessions.md  tools.md
docs/includes/: abbreviations.md
examples/: audio_input_direct.py  audio_input_stt.py  basic_agent.py  basic_azure.py  basic_azure_v1.py  basic_azure_v1_batch.py  basic_azure_v1_non_streaming.py  basic_openai.py  basic_openai_non_streaming.py  basic_openai_ollama.py  basic_openai_with_logging.py  create_test_files.py  image_input_azure_v1.py  tool_hallucination.py
examples/advanced/: create_test_files.py  tool_hallucination.py
examples/basic/: basic_azure.py  basic_azure_v1.py  basic_azure_v1_batch.py  basic_azure_v1_non_streaming.py  basic_openai.py  basic_openai_non_streaming.py  basic_openai_with_logging.py
examples/compaction/: 01_default_compactor.py  02_self_compaction.py  03_custom_compactor.py  04_no_compaction.py  05_trigger_compaction.py  06_manual_compact.py  __init__.py
examples/mcp/: mcp_playwright_config.json  mcp_playwright_example.py
examples/multimodal/: audio_input_direct.py  audio_input_stt.py  image_input_azure_v1.py
examples/openrouter/: basic_openrouter_non_streaming.py  basic_openrouter_streaming.py
src/nagents/: __init__.py  agent.py  compaction.py  compactor.py  exceptions.py  logger.py  media.py  stt.py  types.py
src/nagents/adapters/: anthropic.py  gemini.py  openai.py
src/nagents/batch/: __init__.py  client.py  store.py  types.py
src/nagents/events/: __init__.py  types.py
src/nagents/http/: __init__.py  client.py  logger.py
src/nagents/mcp/: __init__.py  constants.py  errors.py  session.py  transport.py  types.py
src/nagents/migrations/: __init__.py  base.py  batch.py  manager.py  registry.py  sessions.py
src/nagents/provider/: __init__.py  base.py
src/nagents/session/: manager.py
src/nagents/tools/: executor.py  registry.py
src/simple_agents/: __init__.py  agent.py  types.py
src/simple_agents/adapters/: __init__.py  anthropic.py  gemini.py  openai.py
src/simple_agents/batch/: __init__.py  client.py  manager.py  store.py  types.py
src/simple_agents/events/: __init__.py  types.py
src/simple_agents/http/: client.py
src/simple_agents/provider/: __init__.py  base.py
src/simple_agents/session/: __init__.py  manager.py
src/simple_agents/tools/: __init__.py  executor.py  registry.py
tests/: __init__.py  test_basic.py
